--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.5.0",
     "faker": "^4.1.0",
     "json-server": "^0.16.1",
+    "jw-angular-pagination": "^1.1.0",
     "rxjs": "~6.5.4",
     "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
